--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,17 +1,11 @@
-/* Tailwind Imports */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-/* Font Imports */
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
-
-/* Other */
-body {
-    padding: 0;
-    margin: 0;
+.divider {
+    height: 0.1rem;
+    margin-top: 1rem;
+    background-color: rgb(125, 125, 125)
 }
 
-.postlistThumb {
-    width: 12%;
+pre {
+    background-color: rgb(223, 223, 223);
+    padding: 1rem;
+    margin: 0.5rem;
 }
