--- a/_layouts/meta.html
+++ b/_layouts/meta.html
@@ -1,5 +1,5 @@
 ---
-layout: home
+layout: meta
 ---
 
 <head>
@@ -11,7 +11,7 @@ layout: home
 <body>
     {% include header.html %}
     <div class="flex flex-col mx-96">
-        {% for post in site.posts %}
+        {% for post in site.categories.Meta %}
         <a class="flex flex-col" href="{{ post.url }}">
             <h1 href="{{ post.url }}" class="text-xl font-bold">{{ post.title }}</h1>
             <p class="text-gray-700 mb-4">By {{ post.author }} - {{ post.categories }}</p>
