--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: post
     {% include header.html %}
     <div class="flex flex-col mx-96">
         <h1 class="text-xl font-bold">{{ page.title }}</h1>
-        <p class="text-gray-700 mb-4">By {{ page.author }}</p>
+        <p class="text-gray-700 mb-4">By {{ page.author }} - {{ page.categories }}</p>
         <div>{{ content }}</div>
     </div>
     {% include footer.html %}
