--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,9 +11,9 @@
         <a href="/archives/category/devlogs/">DevLogs</a>
     </div>
     <div id="socials" class="flex flex-row items-center justify-center gap-4 lg:justify-end">
-        <a href="https://twitter.com/IzMichael7">T</a>
-        <a href="https://github.com/IzMichael">G</a>
-        <a href="https://izmichael.xyz">W</a>
+        <a href="https://twitter.com/IzMichael7">Twitter</a>
+        <a href="https://github.com/IzMichael">GitHub</a>
+        <a href="https://izmichael.xyz">Website</a>
     </div>
 </div>
 
